# voxel-backend

./: .gitignore  CLAUDE.md  Cargo.toml
.cargo/: config.toml
.claude/commands/: build.md  design.md
batch_output/: report.json
bench-output/: report.json
docs/: geological-realism-per-rock.md  sleep-system-audit.md
nav-debug/: Cargo.toml
nav-debug/src/: main.rs
test-output/: report.json
test-output-1k/: report.json
voxel-cli/: Cargo.toml
voxel-cli/src/: main.rs  report.rs  validation.rs
voxel-cli/src/commands/: batch_test.rs  generate.rs  inspect.rs  mod.rs  scan.rs  sleep.rs
voxel-core/: Cargo.toml
voxel-core/src/: chunk.rs  density.rs  export.rs  ffi.rs  hermite.rs  lib.rs  material.rs  mesh.rs  stress.rs  world_scan.rs
voxel-core/src/dual_contouring/: edge.rs  mesh_gen.rs  mod.rs  qef.rs  seam.rs  solve.rs
voxel-core/src/octree/: builder.rs  iter.rs  lod.rs  mod.rs  node.rs
voxel-core/src/world_scan/: density.rs  mesh.rs  mod.rs  seam.rs  volume.rs  winding.rs  worm.rs
voxel-ffi/: Cargo.toml
voxel-ffi/include/: voxel_ffi.h
voxel-ffi/src/: api.rs  convert.rs  engine.rs  lib.rs  mining.rs  profiler.rs  store.rs  stress.rs  terrain_ops.rs  types.rs  worker.rs
voxel-fluid/: Cargo.toml
voxel-fluid/src/: cell.rs  lib.rs  mesh.rs  pool.rs  sim.rs  sources.rs  tables.rs  thread.rs
voxel-fluid/src/sim/: chunk.rs  mod.rs  utils.rs
voxel-gen/: Cargo.toml
voxel-gen/src/: blend.rs  chunk_manager.rs  config.rs  crystal_placements.rs  density.rs  formations.rs  hermite_extract.rs  lava_tubes.rs  lib.rs  pipeline.rs  pools.rs  region_gen.rs  rivers.rs  seed.rs  springs.rs
voxel-gen/src/formations/: mod.rs  shapes.rs  surface.rs
voxel-gen/src/worm/: carve.rs  connect.rs  mod.rs  path.rs
voxel-gen/src/zones/: bioluminescent.rs  canyon.rs  cathedral.rs  detect.rs  frozen.rs  lake.rs  lava_gallery.rs  mega_apply.rs  mega_blueprint.rs  mod.rs  shapes.rs  terraces.rs
voxel-noise/: Cargo.toml
voxel-noise/src/: domain_warp.rs  fbm.rs  lib.rs  permutation.rs  ridged.rs  simplex.rs  utils.rs
voxel-sleep/: Cargo.toml
voxel-sleep/src/: aureole.rs  aureole_diagnostic.rs  bench.rs  collapse.rs  config.rs  deeptime.rs  groundwater.rs  lib.rs  manifest.rs  metamorphism.rs  minerals.rs  reaction.rs  util.rs  veins.rs
voxel-sleep/src/phases/: aureole.rs  deeptime.rs  mod.rs  veins.rs
voxel-sleep/src/systems/: collapse.rs  minerals.rs  mod.rs  priority.rs
voxel-viewer/: Cargo.toml
voxel-viewer/src/: bench.rs  main.rs  region.rs
voxel-viewer/src/static/: app.js  index.html  style.css
