[workspace]
members = ["voxel-noise", "voxel-core", "voxel-gen", "voxel-cli", "voxel-viewer", "nav-debug", "voxel-ffi"]
resolver = "2"

[workspace.dependencies]
glam = "0.29"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
crossbeam-channel = "0.5"
dashmap = "6"
