[package]
name = "voxel-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
glam.workspace = true
rayon.workspace = true
serde = { workspace = true }
serde_json.workspace = true
voxel-noise = { path = "../voxel-noise" }
voxel-core = { path = "../voxel-core" }
voxel-gen = { path = "../voxel-gen" }
voxel-sleep = { path = "../voxel-sleep" }
voxel-fluid = { path = "../voxel-fluid" }
