[package]
name = "voxel-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
glam.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
dashmap.workspace = true
voxel-core = { path = "../voxel-core" }
voxel-gen = { path = "../voxel-gen" }
voxel-noise = { path = "../voxel-noise" }
voxel-fluid = { path = "../voxel-fluid" }
voxel-sleep = { path = "../voxel-sleep" }
