[package]
name = "voxel-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
diag-gate-1 = []
diag-gate-3 = []
diag-gate-4 = []

[dependencies]
glam.workspace = true
rayon.workspace = true
crossbeam-channel.workspace = true
dashmap.workspace = true
voxel-core = { path = "../voxel-core" }
voxel-gen = { path = "../voxel-gen" }
voxel-noise = { path = "../voxel-noise" }
voxel-fluid = { path = "../voxel-fluid" }
voxel-sleep = { path = "../voxel-sleep" }
