[package]
name = "voxel-sleep"
version = "0.1.0"
edition = "2021"

[dependencies]
glam.workspace = true
serde = { workspace = true }
serde_json.workspace = true
rand.workspace = true
rand_chacha.workspace = true
crossbeam-channel.workspace = true
voxel-core = { path = "../voxel-core" }
voxel-fluid = { path = "../voxel-fluid" }

[dev-dependencies]
voxel-gen = { path = "../voxel-gen" }
