[package]
name = "voxel-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
tiny_http = "0.12"
serde.workspace = true
serde_json.workspace = true
glam.workspace = true
rayon.workspace = true
rand.workspace = true
rand_chacha.workspace = true
voxel-core = { path = "../voxel-core" }
voxel-gen = { path = "../voxel-gen" }
voxel-sleep = { path = "../voxel-sleep" }
voxel-fluid = { path = "../voxel-fluid" }
crossbeam-channel.workspace = true

[[bin]]
name = "voxel-viewer"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"
